@@ -59,7 +59,6 @@ List::Util = 1.33
 Locale::Country = 3.11
 Net::FTP = 0
 Parallel::ForkManager = 0
-Params::Validate = 0
 Path::Class = 0
 Test::Output = 0
 Test::Taint = 0
